--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
 
     env:
       VENDOR: xiaomi
@@ -31,15 +31,14 @@ jobs:
     
     - name: Initialization environment
       run: |
+        sudo dpkg --add-architecture i386
         sudo apt-get update
-        sudo apt-get install -y \
-        openjdk-8-jdk android-tools-adb bc \
-        bison build-essential curl flex g++-multilib \
-        gcc-multilib gnupg gperf imagemagick lib32ncurses5-dev \
-        lib32readline-dev lib32z1-dev libesd0-dev liblz4-tool \
-        libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-dev \
-        libxml2 libxml2-utils lzop pngcrush rsync schedtool \
-        squashfs-tools xsltproc yasm zip zlib1g-dev git
+        sudo apt install -y git gnupg flex bison gperf build-essential \
+        zip bzr curl libc6-dev libncurses5-dev:i386 x11proto-core-dev \
+        libx11-dev:i386 libreadline6-dev:i386 libgl1-mesa-glx:i386 \
+        libgl1-mesa-dev g++-multilib mingw-w64-i686-dev tofrodos \
+        python-markdown libxml2-utils xsltproc zlib1g-dev:i386 schedtool \
+        repo liblz4-tool bc lzop imagemagick libncurses5 rsync
         sudo docker rmi `docker images -q`
         sudo rm -rf \
           /usr/share/dotnet \
